--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.10.4"
+        "bootstrap-icons": "^1.10.4",
+        "chart.js": "^4.3.0"
     }
 }
